# agentid

./: .env.example  .gitignore  .vercelignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: ci.yml  e2e-tests.yml
apps/dashboard/: .env.example  middleware.ts  next.config.ts  package.json  sentry.client.config.ts  sentry.server.config.ts  tailwind.config.ts  tsconfig.json
docs/: architecture.md  design-proposal.md  product-roadmap-v2.md  product-roadmap.md  sdk-python.md  sdk-typescript.md
e2e-tests/: core-features.spec.ts  credential-wizard.spec.ts  package-lock.json  package.json  playwright.config.ts  public-api.spec.ts  public-pages.spec.ts  sprint7-features.spec.ts  sprint8-features.spec.ts
scripts/: check-reputation.sh  query-db.sh  test-credential.mjs  test-verify.sh  test-webhooks.mjs  test-webhooks.sh
sdks/python/: README.md  pyproject.toml
sdks/python/agentid/: __init__.py  a2a.py  cache.py  client.py  credential.py  exceptions.py  registry.py  revocation.py  signature.py  types.py  verifier.py
sdks/python/agentid/integrations/: __init__.py  fastapi.py  langchain.py
sdks/python/examples/: basic_usage.py  fastapi_server.py  langchain_integration.py  service_verification.py
sdks/python/tests/: __init__.py  test_cache.py  test_credential.py  test_signature.py  test_verifier.py
sdks/typescript/: README.md  package-lock.json  package.json  tsup.config.ts
supabase/: config.toml  policies.md
supabase/migrations/: 001_initial_schema.sql  002_rls_policies.sql  003_add_public_issuer_read.sql  004_performance_indexes.sql  005_webhooks.sql  006_reputation.sql  007_api_keys.sql  008_credential_templates.sql  009_analytics.sql  010_audit_logs_and_teams.sql  011_domain_verification.sql  012_revocation_stream.sql  013_permission_policies.sql  014_usage_alerts.sql  015_agent_registry.sql  016_a2a_protocol.sql  017_trust_score_history.sql  018_sso_configuration.sql  019_encryption_keys.sql  020_agent_profile.sql  021_fix_analytics_rls.sql  (+2 more)
(+198 files in other folders)
