[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentid"
version = "0.1.0"
description = "Python SDK for AgentID - Identity and authorization for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "AgentID", email = "sdk@agentid.dev" }
]
keywords = ["ai", "agents", "identity", "credentials", "authorization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "httpx>=0.25.0",
    "pynacl>=1.5.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
requests = ["requests>=2.28.0"]
langchain = ["langchain-core>=0.1.0"]
fastapi = ["fastapi>=0.100.0", "starlette>=0.27.0"]
websockets = ["websockets>=11.0.0"]
all = [
    "requests>=2.28.0",
    "langchain-core>=0.1.0",
    "fastapi>=0.100.0",
    "starlette>=0.27.0",
    "websockets>=11.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-httpx>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://agentid.dev"
Documentation = "https://docs.agentid.dev/sdk/python"
Repository = "https://github.com/agentid/agentid-python"

[tool.hatch.build.targets.wheel]
packages = ["agentid"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
